--- a/src/components/PaymentForm/paymentForm.module.scss
+++ b/src/components/PaymentForm/paymentForm.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 16.5rem 16.5rem;
+  grid-template-columns: auto auto;
   grid-template-areas:
     'cardNumberField cardNumberField'
     'cardValidDateField cardCvvField'
