--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
   --bg-color-container: #fff;
   --white: #fff;
   --black: #151516;
-  --gray-1: #F4F3F6;
-  --gray-2: #E1DEE8;
-  --gray-3: #C9C5D4;
+  --gray-1: #f4f3f6;
+  --gray-2: #e1dee8;
+  --gray-3: #c9c5d4;
   --gray-4: #727272;
 
   --heading-size-4: 2rem;
