--- a/src/app/checkout/page.module.scss
+++ b/src/app/checkout/page.module.scss
@@ -6,6 +6,7 @@
   height: 100%;
   padding: 7.2rem 24.8rem 0;
   max-width: 136.6rem;
+  margin: 0 auto;
 
   @media (max-width: 1280px) {
     padding: 7.2rem 16rem 0;
