feat(app/confirmation): adds `PurchaseData` component in the view

--- a/src/app/confirmation/page.module.scss
+++ b/src/app/confirmation/page.module.scss
@@ -5,12 +5,12 @@
   align-items: center;
   gap: 7.18rem;
   height: 100%;
-  padding: 7.2rem 24.8rem 0;
-  max-width: 136.6rem;
+  padding: 7.2rem 0 0;
+  max-width: 34.3rem;
   margin: 0 auto;
 
   @media (max-width: 1280px) {
-    padding: 7.2rem 16rem 0;
+    padding: 7.2rem 0 0;
   }
 
   @media (max-width: 992px) {
