--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,10 +1,16 @@
 .container {
   width: 100%;
-  padding-top: 3.1rem;
+  padding: 3.1rem 6.8rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+
+  @media (max-width: 992px) {
+    padding: 3.1rem 1.5rem;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+  }
 }
 
 .goBackButton {
