--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -13,6 +13,7 @@
   --body-font-size: 1.6rem;
   --body-font-size-2: 1.4rem;
   --note-font-size: 1.2rem;
+  --container-max-width: 136.6rem;
 }
 
 * {
