--- a/src/views/Checkout/checkoutView.module.scss
+++ b/src/views/Checkout/checkoutView.module.scss
@@ -5,7 +5,7 @@
   gap: 6rem;
   height: 100%;
   padding: 7.2rem 24.8rem 0;
-  max-width: 136.6rem;
+  max-width: var(--container-max-width);
   margin: 0 auto;
 
   @media (max-width: 1280px) {
