feat: create homepage view

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,6 +9,7 @@
   --gray-3: #c9c5d4;
   --gray-4: #727272;
 
+  --heading-size-3: 1.8rem;
   --heading-size-4: 2rem;
   --body-font-size: 1.6rem;
   --body-font-size-2: 1.4rem;
