--- a/src/views/Home/homeView.module.scss
+++ b/src/views/Home/homeView.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/_breakpoints';
+
 .container {
   display: flex;
   gap: 6.4rem;
@@ -5,35 +7,24 @@
   padding: 7.2rem 1.6rem 0;
   max-width: var(--container-max-width);
 
-  @media (min-width: 792px) {
-    background-image: url(https://whitebook.pebmed.com.br/images/bg-home.png);
-    background-position: bottom 400px right -32px;
-    background-repeat: no-repeat;
-    min-height: calc(100vh - 120px);
-    background-size: 300px;
-  }
-
-  @media (min-width: 880px) {
-    background-position: bottom 400px right -32px;
-    background-size: 400px;
-  }
-
-  @media (min-width: 993px) {
-    flex-direction: row-reverse;
-    background-position: bottom 30px right 0;
-    background-size: 640px;
-    justify-content: center;
-  }
-
-  @media (min-width: 1136px) {
-    background-position: bottom 0 right 0;
-    background-size: 700px;
-  }
-
-  @media (max-width: 992px) {
+  @media (max-width: $screen-m) {
     flex-direction: column;
     gap: 2.4rem;
     padding: 0 1.5rem 1.5rem;
+  }
+
+  @media (min-width: calc($screen-m + 1px)) {
+    flex-direction: row-reverse;
+    background-image: url(https://whitebook.pebmed.com.br/images/bg-home.png);
+    background-repeat: no-repeat;
+    background-position: bottom 30px right 0;
+    background-size: 500px;
+    justify-content: center;
+  }
+
+  @media (min-width: $screen-l) {
+    background-position: bottom 0 right 0;
+    background-size: 520px;
   }
 }
 
@@ -43,7 +34,7 @@
   align-items: flex-start;
   width: 100%;
   height: 100%;
-  @media (min-width: 993px) {
+  @media (min-width: calc($screen-m + 1px)) {
     max-width: 50rem;
   }
 
@@ -93,14 +84,27 @@
 }
 
 .reasonsToChose {
+  @media (min-width: calc($screen-m + 1px)) {
+    min-height: 850px;
+  }
+
   ol {
     display: flex;
     flex-direction: column;
-    gap: 1.6rem;
     padding-left: 1.6rem;
     max-width: 50rem;
     color: var(--gray-4);
     font-size: var(--body-font-size-2);
+    gap: 1.6rem;
+
+    @media (min-width: $screen-xs) and (max-width: $screen-m) {
+      display: grid;
+      grid-template-columns: auto auto;
+      width: 100%;
+      max-width: max-content;
+      gap: 2.4rem;
+      column-gap: 2.8rem;
+    }
   }
 
   h2 {
