--- a/src/components/PaymentForm/paymentForm.module.scss
+++ b/src/components/PaymentForm/paymentForm.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakpoints';
+
 .container {
   display: grid;
   grid-template-columns: auto auto;
@@ -13,6 +15,19 @@
   column-gap: 4rem;
   row-gap: 3rem;
   font-size: var(--body-font-size);
+
+  @media (max-width: calc($screen-xs - 201px)) {
+    grid-template-columns: auto;
+    grid-template-areas:
+      'cardNumberField'
+      'cardValidDateField'
+      'cardCvvField'
+      'cardUserNameField'
+      'cardUserCpfField'
+      'couponField'
+      'installments'
+      'submitButton';
+  }
 }
 
 .cardNumberField {
