--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakpoints';
+
 .container {
   width: 100%;
   padding: 3.1rem 6.8rem 0;
@@ -6,7 +8,7 @@
   align-items: center;
   position: relative;
 
-  @media (max-width: 992px) {
+  @media (max-width: $screen-m) {
     padding: 3.1rem 1.5rem;
     justify-content: space-between;
     flex-direction: row-reverse;
@@ -20,7 +22,7 @@
   cursor: pointer;
   background-color: transparent;
 
-  @media (max-width: 992px) {
+  @media (max-width: $screen-m) {
     left: 1.5rem;
   }
 }
