--- a/src/views/ConfirmationView/confirmationView.module.scss
+++ b/src/views/ConfirmationView/confirmationView.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakpoints';
+
 .container {
   background-color: var(--bg-color-container);
   display: flex;
@@ -9,11 +11,11 @@
   max-width: 34.3rem;
   margin: 0 auto;
 
-  @media (max-width: 1280px) {
+  @media (max-width: calc($screen-l + 80px)) {
     padding: 7.2rem 0 0;
   }
 
-  @media (max-width: 992px) {
+  @media (max-width: $screen-m) {
     padding: 2.4rem 1.5rem;
   }
 }
